--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,14 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/cf10439109.js" crossorigin="anonymous"></script>
     <title>@ViewData["Title"] - Cinemanage</title>
+
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Cinemanage.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
-        <nav class="navbar fixed-top navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
+        <nav class="navbar  navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow">
             <div class="container-fluid d-flex p-2">
                 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -56,7 +58,7 @@
             </div>
         </nav>
     </header>
-    <div class="container-lg">
+    <div class="container-fluid m-0 p-0">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
