--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,39 +3,39 @@
 @{
     ViewData["Title"] = "Cinemanage";
 }
-
-<section class="header-wrapper" id="imageHeader">
-
-    @{
-        var rand = new Random();
-        var imagePath = "";
-        foreach (var randomMovie in Model.NowPlaying.results.OrderBy(x => rand.Next()).Take(1))
-        {
-            imagePath = randomMovie.backdrop_path;
-        }
+@{
+    var rand = new Random();
+    var imagePath = "";
+    foreach (var randomMovie in Model.NowPlaying.results.OrderBy(x => rand.Next()).Take(1))
+    {
+        imagePath = randomMovie.backdrop_path;
     }
+}
 
+<section id="header" style="background-position:center;background-size:cover;background-image:url(@imagePath);">
+    <div class="home-header mb-3" style="background:rgba(0,0,0,0.3);">
+        <div class="header-content">
+            <div class="welcome-text">
+                <h1>Welcome to CineManage.</h1>
+                <h2>Search millions of movies, and CREATE your OWN COLLECTIONS!</h2>
+            </div>
 
-    <img src="@imagePath" class="img-fluid w-100" />
-
-    <div class="welcome-text">
-        <h1>Welcome to Cine Manage.</h1>
-        <h4>Search millions of movies, and CREATE your OWN COLLECTIONS!</h4>
-    </div>
-        <form role="search" asp-controller="Movies" asp-action="SearchIndex">
-        <div class="input-group mb-3 centered">
-            <input type="text" class="form-control border-0" placeholder="Search Movies" name="searchTerm" aria-label="Movie Name" aria-describedby="Search-Term">
-            <button class="btn btn-success border-0" type="submit" id="searchButton">
-                <i class="fas fa-search"></i>
-            </button>
+            <form role="search" asp-controller="Movies" asp-action="SearchIndex">
+                <div class="input-group">
+                    <input type="text" class="form-control form-control-lg border-0" placeholder="Search Movies" name="searchTerm" aria-label="Movie Name" aria-describedby="Search-Term">
+                    <button class="btn btn-success border-0" type="submit" id="searchButton">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </div>
+            </form>
         </div>
-        </form>  
+    </div>
 </section>
 
-<section id="upcoming" class="px-1 m-5">
+<section id="upcoming" class="px-1">
     @*  ----------- UPCOMING --------------- *@
-    <div class="row">
-        <span>UPCOMING</span>
+    <div class="row text-center">
+        <h1 class="category-text">UPCOMING</h1>
     </div>
     @* Display Upcoming Movies Carousel *@
 
@@ -43,17 +43,18 @@
         <div class="carousel-inner">
             @{
                 var classText = "active";
-                @foreach (var movie in Model.Upcoming.results.Take(15))
+                @foreach (var movie in Model.Upcoming.results.OrderByDescending(x => x.release_date).Take(15))
                 {
                     <div class="carousel-item @classText">
                         <div class="card text-center border-0">
                             <a asp-action="Details" asp-controller="Movies" asp-route-id="@movie.id">
                                 <img src="@movie.poster_path" class="img-fluid" alt="...">
                             </a>
-                            <div class="card-body p-2">
+                            <div class="card-body p-1">
                                 <a asp-action="Details" asp-controller="Movies" asp-route-id="@movie.id">
                                     <p class="mt-2">@movie.title</p>
                                 </a>
+                                <span class="text-muted mt-1">@movie.release_date</span>
                             </div>
                         </div>
                     </div>
@@ -71,13 +72,12 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    <hr />
 </section>
 
 <section id="nowPlaying" class="px-1">
     @*  ----------- NOW PLAYING --------------- *@
-    <div class="row">
-        <span>NOW PLAYING</span>
+    <div class="row text-center">
+        <h1 class="category-text">NOW PLAYING</h1>
     </div>
 
     @* Display Now Playing Movies Carousel *@
@@ -114,14 +114,12 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    <hr />
-
 </section>
 
 <section id="popular" class="px-1">
     @*  ----------- POPULAR --------------- *@
-    <div class="row">
-        <span>POPULAR</span>
+    <div class="row text-center">
+        <h1 class="category-text">POPULAR</h1>
     </div>
 
     @* Display Popular Movies Carousel *@
@@ -158,14 +156,12 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    <hr />
-
 </section>
 
 <section id="topRated" class="px-1">
     @*  ----------- TOP RATED --------------- *@
-    <div class="row">
-        <span>TOP RATED</span>
+    <div class="row text-center">
+        <h1 class="category-text">TOP RATED</h1>
     </div>
 
     @* Display Top Rated Movies Carousel *@
@@ -202,8 +198,6 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    <hr />
-
 </section>
 
 
