--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,8 +15,8 @@
 </head>
 <body>
     <header>
-        <nav class="navbar  navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow">
-            <div class="container-fluid d-flex p-2">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm">
+            <div class="container-fluid d-flex p-1">
                 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -26,10 +26,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
 
                         @if (User.IsInRole("Administrator"))
@@ -53,7 +53,7 @@
                     </ul>
 
                     <a asp-area="" asp-controller="Home" asp-action="Index" class="navLogo">
-                        <img src="/img/Cinemanage-Logo.svg" class="img-fluid" width="120" />
+                        <img src="/img/cinemanage-logov2.svg" class="img-fluid" width="120" />
                     </a>
                     <partial name="_LoginPartial" />
                 </div>
