--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -24,7 +24,7 @@ html {
 body {
     margin: 0;
     padding: 0;
-    background-color: #white;
+    background-color: black;
 }
 
 main {
@@ -39,11 +39,15 @@ main {
 }
 
 footer {
-    background-color: white;
+    background-color: #291B25;
 }
 
 nav {
-    background-color: white;
+    background-color: #291B25;
+}
+
+.nav-link {
+    color: white !important;
 }
 
 /*body, row {
@@ -104,11 +108,11 @@ nav {
     text-decoration: none;
     font-weight: bolder;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: black;
+    color: #6C9F9C;
 }
 
     .card-body a:hover {
-        color: #FC3635;
+        color: #DF643A;
     }
 
 .carousel .card img {
@@ -131,30 +135,36 @@ nav {
 .navLogo {
     position: absolute;
     left: 50%;
-    margin-left: -65px !important;
+    margin-left: -60px !important;
     /* 50% of your logo width */
     display: block;
 }
 
 .home-header {
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    background:center no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: center no-repeat;
     background-size: contain;
     text-align: left;
     height: 25em;
     width: 100%;
-    
 }
+    .home-header .btn {
+        color: white;
+        background-color:black;
+    }
 
-.header-content{
-    display:block;
-    flex:0 0 80%;
+        .home-header .btn:hover {
+            background-color: #F3C566;
+        }
+
+.header-content {
+    display: block;
+    flex: 0 0 80%;
 }
 
 .form-control {
-
     border-top-left-radius: 25px !important;
     border-bottom-left-radius: 25px !important;
 }
@@ -175,14 +185,17 @@ nav {
     }
 
 .category-text {
-    color: black;
+    color: #F3C566;
     font-family: 'Oleo Script', serif;
 }
+
+
 
 #upcoming, #nowPlaying, #popular, #topRated {
     margin-left: 10px;
     margin-right: 10px;
 }
+
 
 
 
