--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,24 +28,22 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"><i class="fa-solid fa-house fa-lg" style="color: #ffffff;"></i></a>
                         </li>
-                        <li class="nav-item">
+                       @*  <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                        </li> *@
 
                         @if (User.IsInRole("Administrator"))
                         {
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Manage Collections
+                                    My Collections
                                 </a>
 
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" asp-controller="Collections" asp-action="Index">Collections</a></li>
-                                    <li><a class="dropdown-item" asp-controller="Posts" asp-action="Create">Create Post</a></li>
-                                    <li><a class="dropdown-item" asp-controller="Blogs" asp-action="Index">Blogs</a></li>
-                                    <li><a class="dropdown-item" asp-controller="Posts" asp-action="Index">Posts</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Collections" asp-action="Create">Create New</a></li>
                                 </ul>
 
                             </li>
