--- a/Views/MovieCollections/Index.cshtml
+++ b/Views/MovieCollections/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Cinemanage.Models.Database.MovieCollection>
+﻿@model IEnumerable<Cinemanage.Models.Database.Collection>
 
 @{
     ViewData["Title"] = "Index";
@@ -6,14 +6,9 @@
 
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 
-@if (Model is not null)
-        {
 
-<table class="table">
+    <table class="table">
     <thead>
         <tr>
             <th>
@@ -29,33 +24,25 @@
         </tr>
     </thead>
     <tbody>
-
-        
-
-
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Order)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Collection.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Movie.Id)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
-
-}
-else
-{
-    <h1>This List is EMPTY</h1>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Order)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Collection.Id)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Movie.Id)
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 }
