--- a/Views/MovieCollections/Index.cshtml
+++ b/Views/MovieCollections/Index.cshtml
@@ -1,4 +1,13 @@
-﻿@model IEnumerable<Cinemanage.Models.Database.Collection>
+﻿@using Cinemanage.Models.Database
+@using X.PagedList
+@using X.PagedList.Mvc.Core
+@using X.PagedList.Web.Common
+
+
+
+
+
+@model IPagedList<MovieCollection>
 
 @{
     ViewData["Title"] = "Index";
@@ -7,42 +16,18 @@
 <h1>Index</h1>
 
 
-
-    <table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Order)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Collection)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Movie)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Order)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Collection.Id)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Movie.Id)
-                    </td>
-                    <td>
-                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
+@if (Model.Count == 0)
+{
+    <p>No items found in this collection.</p>
+}
+else
+{
+    <ul>
+        @foreach (var item in Model)
+        {
+            <li>
+                <strong>@Model.TotalItemCount</strong>: @item.MovieCollectionsList.Count
+            </li>
+        }
+    </ul>
 }
