--- a/Views/MovieCollections/Index.cshtml
+++ b/Views/MovieCollections/Index.cshtml
@@ -26,7 +26,7 @@ else
         @foreach (var item in Model)
         {
             <li>
-                <strong>@Model.TotalItemCount</strong>: @item.MovieCollectionsList.Count
+                <strong>@item.Movie.Title</strong>
             </li>
         }
     </ul>
