--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -154,7 +154,7 @@ nav {
     border-radius: 50px;
     padding: 40px;
     margin: auto;
-    background-color: white;
+    background-color: #505050;
 }
 
 #header{
