--- a/Views/MovieCollections/Index.cshtml
+++ b/Views/MovieCollections/Index.cshtml
@@ -4,16 +4,10 @@
 @using X.PagedList.Web.Common
 
 
-
-
-
 @model IPagedList<MovieCollection>
 
-@{
-    ViewData["Title"] = "Index";
-}
 
-<h1>Index</h1>
+<h1>@ViewData["Title"]</h1>
 
 
 @if (Model.Count == 0)
@@ -22,12 +16,34 @@
 }
 else
 {
-    <ul>
-        @foreach (var item in Model)
-        {
-            <li>
-                <strong>@item.Movie.Title</strong>
-            </li>
-        }
-    </ul>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    <h4>Movie</h4>
+                </th>
+                <th>
+                    <h4>Rating</h4>
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Movie.Title)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Movie.Rating)
+                    </td>
+                    <td>
+                        <a asp-controller="Movies" asp-action="Details" asp-route-id="@item.Movie.MovieId">Details</a> |
+                        <a asp-controller="MovieCollections" asp-action="DeleteConfirmed" asp-route-id="@item.Movie.MovieId" asp-route-collectionId="@item.CollectionId">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 }
