added portfolio link to layout

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -77,7 +77,8 @@
 
                 </div>
                 <di class="col">
-                    &copy; 2023 - Cinemanage - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                    &copy; 2023 - Cinemanage - <a href="https://murilobarbosa.dev" target="
+">Murilo Barbosa</a>
 
                 </di>
             </div>
